--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <h2>Effective Collaboration with Product and Design</h2>
             <h3>On Being a Good Teammate</h3>
         </div>
+        <script src=""main.js"></script>
         <main>
             <div class="parent">
                 <div class="head">
